// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hashTag HashTag in sentence with spaces 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "This is a",
        "text": "This is a",
        "type": "plain",
      },
      Object {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      Object {
        "href": "tag",
        "raw": "#tag",
        "type": "hashTag",
      },
      Object {
        "raw": " .",
        "text": " .",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag HashTag in sentence without spaces is not hashTag 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "→#notTag←",
        "text": "→#notTag←",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag HashTag includes \`#\` 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "href": "hash#Tag",
        "raw": "#hash#Tag",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Multiple hashTag 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "href": "hoge",
        "raw": "#hoge",
        "type": "hashTag",
      },
      Object {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      Object {
        "href": "fuga",
        "raw": "#fuga",
        "type": "hashTag",
      },
      Object {
        "raw": " ",
        "text": " ",
        "type": "plain",
      },
      Object {
        "href": "piyo",
        "raw": "#piyo",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Only \`#\` is not hashTag 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "#",
        "text": "#",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`hashTag Simple hashTag 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "href": "tag",
        "raw": "#tag",
        "type": "hashTag",
      },
    ],
    "type": "line",
  },
]
`;
